package com.hotelimperial.backend.domain;

public enum StatusPagamento {
    PENDENTE,
    APROVADO,
    NEGADO,
    ESTORNADO
}
