package com.hotelimperial.backend.domain;

public enum StatusQuarto {
    DISPONIVEL,
    OCUPADO,
    MANUTENCAO
}
