package com.hotelimperial.backend.domain;

public enum StatusReserva {
    PENDENTE,
    CONFIRMADA,
    CANCELADA,
    CONCLUIDA
}
