classDiagram
    class Pessoa {
        <<abstract>>
        -id : int
        -nome : String
        -cpf : String
        -email : String
        -telefone : String
        -dataNascimento : LocalDate
    }

    class Hospede {
        -inativo : boolean
    }

    class Endereco {
        -id : int
        -logradouro : String
        -numero : String
        -cep : String
        -bairro : String
        -complemento : String
    }

    class Cidade {
        -id : int
        -nome : String
    }

    class Estado {
        -id : int
        -nome : String
        -uf : String
    }

    class Quarto {
        -id : int
        -numero : String
        -tipo : String
        -capacidadeAdultos : int
        -capacidadeCriancas : int
        -valorDiaria : double
        -status : StatusQuarto
    }

    class StatusQuarto {
        <<enumeration>>
        DISPONIVEL
        OCUPADO
        MANUTENCAO
    }

    class Reserva {
        -id : int
        -dataEntrada : LocalDate
        -dataSaida : LocalDate
        -checkinRealizado : boolean
        -noShow : boolean
        -qtdAdultos : int
        -qtdCriancas : int
        -valorTotal : double
        -status : StatusReserva
    }

    class StatusReserva {
        <<enumeration>>
        PENDENTE
        CONFIRMADA
        CANCELADA
        CONCLUIDA
    }

    class Promocao {
        -id : int
        -codigo : String
        -descricao : String
        -descontoPercentual : double
        -inativo : boolean
    }

    class PoliticaCancelamento {
        -id : int
        -descricao : String
        -horasAntecedencia : int
        -percentualMulta : double
        -inativo : boolean
    }

    class Pagamento {
        -id : int
        -dataPagamento : LocalDateTime
        -valor : double
        -formaPagamento : String
        -status : StatusPagamento
    }

    class StatusPagamento {
        <<enumeration>>
        PENDENTE
        APROVADO
        NEGADO
        ESTORNADO
    }

    Pessoa <|-- Hospede
    Pessoa "1" --> "1" Endereco : possui
    Endereco "1" --> "1" Cidade : pertence
    Cidade "1" --> "1" Estado : localiza-se

    Hospede "1" --> "0..*" Reserva : realiza
    Reserva "1" --> "1" Quarto : reserva
    Reserva "0..*" --> "0..1" Promocao : utiliza
    Reserva "0..*" --> "1" PoliticaCancelamento : sujeita-a
    Reserva "1" --> "0..*" Pagamento : possui

    note for Hospede "RF0101-0104: CRUD Hóspedes\nRN0201: Dados obrigatórios\nRN0202: CPF único\nRN0211: E-mail válido\nRNF0113: Privacidade & LGPD"
    note for Quarto "RF0111-0114: CRUD Quartos\nRN0203: Dados obrigatórios\nRN0215: Limites de Quarto Padrão"
    note for Reserva "RF0201: Consultar disponibilidade\nRF0202-0206: Proposta, Criar, Alterar, Cancelar\nRF0207: Marcar No-Show\nRF0208-0209: Registrar Check-in/out\nRN0204: Dados obrigatórios\nRN0212: Janela de datas válida\nRN0213: Capacidade do quarto\nRN0214: Mínimo diárias feriados\nRN0221: Horário das diárias (14h-12h)\nRN0223: No-show no dia de entrada\nRN0241: Isenção de crianças <= 5 anos\nRN0243: Documento com foto no check-in"
    note for Promocao "RF0121-0124: CRUD Promoções\nRN0242: Não cumulativas por padrão"
    note for PoliticaCancelamento "RF0131-0134: CRUD Políticas\nRN0231: Cancelamento sem multa (48h)\nRN0232: Cancelamento com multa (50%)\nRN0233: Estorno proporcional à política"
    note for Pagamento "RF0211-0214: CRUD Pagamentos\nRN0205: Dados obrigatórios\nRN0222: Confirmação só após aprovação"
